ngw.tf
resource "aws_eip" "nat_eip" {
  vpc = true
}


resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.template["public"].id
}
