route_table.tf
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.boda_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.my_igw.id
  }
  tags = {
    Name = "public-route-table"
  }
}


resource "aws_route_table_association" "public_subnet_association" {
  subnet_id      = aws_subnet.template["public"].id
  route_table_id = aws_route_table.public_route_table.id
}


resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.boda_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gateway.id
  }
tags = {
    Name = "private-route-table"
  }

}

resource "aws_route_table_association" "private_route_table_association" {
  subnet_id      = aws_subnet.template["private"].id
  route_table_id = aws_route_table.private_route_table.id
}
